fix code block line numbers not showing up

--- a/clyde-theme/assets/styles/1-main.css
+++ b/clyde-theme/assets/styles/1-main.css
@@ -119,6 +119,10 @@ h4 { font-size: 1em; }
 	margin: 20px 0px;
 }
 
+.content pre {
+	overflow-x: auto;
+}
+
 .content code {
 	font-family: monospace;
 	font-size: 0.9em;
@@ -126,7 +130,6 @@ h4 { font-size: 1em; }
 	margin: 0;
 	background-color: var(--nav-code-bg-color);
 	border-radius: 3px;
-	overflow-x: auto;
 }
 
 .content blockquote {
